# Cloudish

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
inc/: Cloudish.h
src/: CMakeLists.txt  Cloudish.cpp
tests/: CMakeLists.txt
